# OCR

./: main.py  pyproject.toml
utlity/: chromadb.py  documnet_proesser.py  env_load.py  llm.py
